fixed title-subtitle spacing on project teaser, added font-awesome for later

--- a/sass/index.sass
+++ b/sass/index.sass
@@ -45,6 +45,13 @@
 
 .project-teaser__caption
   position: absolute
+  top: 50%
+  left: 50%
+  transform: translate(-50%, -50%)
+  width: 100%
+
+.project-teaser__caption-wrapper
+  position: absolute
   top: 0
   left: 0
   bottom: 0
@@ -52,7 +59,7 @@
   background-color: rgba(255, 255, 255, 0)
   transition-duration: 0.35s
 
-.project-teaser__caption:hover
+.project-teaser__caption-wrapper:hover
   background-color: rgba(255, 255, 255, 0.8)
   transition-duration: 0.35s
 
@@ -116,48 +123,39 @@ a:active
 .project-teaser__title
   font-weight: 700
   font-family: $adelleSans
-  font-size: 5rem
-  position: absolute
-  left: 50%
-  top: 50%
-  transform: translate(-50%, -50%)
+  color: $darkGray
+  font-size: 4rem
+  text-align: center
+  transform: translateY(50%)
   -webkit-transition-delay: 0.05s
   transition-delay: 0.05s
   -webkit-transition-duration: 0.35s
   transition-duration: 0.35s
   opacity: 0
-
-  color: $darkGray
-  //background: #fff
-  //box-shadow: 5px 5px 0 #000
-  //padding: 5px 20px
+  margin: 0 1em
 
 .project-teaser__subtitle
   font-family: $robotoMono
   font-size: 1.6rem
   text-align: center
   display: block
-  width: 80%
-
   transition-delay: 0.5s
-  position: absolute
-  left: 50%
-  top: 60%
-  transform: translate(-50%, -50%)
+  transform: translateY(50%)
   opacity: 0
   -webkit-transition: opacity 0.2s, -webkit-transform 0.35s
   transition: opacity 0.2s, transform 0.35s
+  margin: 0 2.5em
 
 .project-teaser:hover .project-teaser__subtitle
   opacity: 1
 
 .project-teaser:hover .project-teaser__title
-  -webkit-transform: translate(-50%, calc(-50px - 50%))
-  transform: translate(-50%, calc(-50px - 50%))
+  -webkit-transform: translateY(0%)
+  transform: translateY(0%)
 
 .project-teaser:hover .project-teaser__subtitle
-  -webkit-transform: translate(-50%, calc(-50px - 50%))
-  transform: translate(-50%, calc(-30px - 50%))
+  -webkit-transform: translateY(0%)
+  transform: translateY(0%)
 
 .project-teaser:hover .project-teaser__title
   -webkit-transition-delay: 0.05s
